--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.5.2
-        with:
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY_ACT }} # This forces checkout to use SSH, not HTTPS
+
+      - name: Install wget
+        if: runner.os == 'Windows'
+        run: |
+          choco install wget --no-progress
 
       - name: Try downloading
         shell: bash
